welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:24: error: ';' expected but ')' found.
		setCouleurBrosse(T(T.length + dec -1)%(T.length)))
                                                                 ^